@@ -7,6 +7,7 @@ Date: 28. 11. 2020
     - Updated for factorio 1.1
   Bugfixes:
     - Fixed technology icons
+    - Fixed shield build position
   Warning:
     - Moved oil generator, advanced lab, advanced accumulator, and large storage tank to another mod
 
